--- a/templates/video.html
+++ b/templates/video.html
@@ -19,7 +19,7 @@
         window.addEventListener('DOMContentLoaded', function() {
             video.play().then(function() {
                 // Video playback started successfully
-                video.muted = false;  // Unmute the video
+               // video.muted = false;  // Unmute the video
             }).catch(function(error) {
                 // Video playback failed. This can happen, for example, if the user hasn't interacted with the document first.
                 console.error("Video playback failed:", error);
