--- a/templates/video.html
+++ b/templates/video.html
@@ -29,7 +29,7 @@
         // Add an event listener to detect when the video has ended
         video.addEventListener('ended', function() {
             // Refresh the page once the video is finished
-            location.reload();
+            location.replace("https://showstream-32id.onrender.com/current_event_show");
         });
     </script>
 </body>
