--- a/templates/video.html
+++ b/templates/video.html
@@ -10,7 +10,11 @@
         <source src="{{ video_path }}" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-
+<audio id="myAudio" controls autoplay>
+ 
+  <source src="{{ audio_path }}" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
     <script>
         // Get the video element
         var video = document.getElementById('videoPlayer');
